--- a/enigma-web/package.json
+++ b/enigma-web/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.4",
     "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
     "vue-tsc": "^2.1.10"
   }
 }
