--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,11 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "types": ["node"],
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "preserveValueImports": true,
-    "importsNotUsedAsValues": "error"
-  },
-
+  "files": [],
   "references": [
     {
       "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
     }
   ]
 } 
