--- a/enigma-web/package.json
+++ b/enigma-web/package.json
@@ -12,8 +12,14 @@
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "^22.10.1",
+    "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.1",
     "vue-tsc": "^2.1.10"
+  },
+  "dependencies": {
+    "vue": "^3.5.13"
   }
 }
