--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "enigma-web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
@@ -24,8 +25,6 @@
     "@mdi/font": "^7.3.67",
     "@rushstack/eslint-patch": "^1.5.1",
     "@types/node": "^20.9.4",
-    "@types/tweetnacl": "^1.0.2",
-    "@types/tweetnacl-util": "^0.15.1",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
