Update package and TypeScript configurations. Added new dependencies for Vue runtime and web3 types in package.json and package-lock.json. Modified tsconfig files to improve module resolution and include additional type definitions for better compatibility with Vue and Node. Refined includes in tsconfig.app.json and tsconfig.json for enhanced type safety.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,15 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["vite/client", "node", "vue", "@vue/runtime-core", "@vue/runtime-dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "vite.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
