--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/runtime-core": "^3.3.8",
+    "@vue/runtime-dom": "^3.3.8",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
@@ -37,4 +39,4 @@
     "vite": "^5.0.2",
     "vue-tsc": "^1.8.22"
   }
-} 
+}
