--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
+  "extends": "./tsconfig.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
@@ -8,7 +8,6 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node"],
-    "moduleResolution": "bundler"
+    "types": ["node", "vue"]
   }
 } 
