Refactor Vue and TypeScript configurations. Updated package-lock.json to include new Vuetify version and removed outdated web3 types. Modified tsconfig files to improve module resolution and type definitions, ensuring compatibility with Vue's runtime. Adjusted imports in Vue components for better type safety and clarity.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "vue"]
+    "types": ["node"],
+    "module": "es2015",
+    "moduleResolution": "node"
   }
 } 
